优化指标 添加 突破信息